--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
+    "react-router-dom": "^5.2.0",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
@@ -40,11 +41,13 @@
     "@types/jest": "26.0.23",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
+    "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "5.1.10",
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
     "babel-loader": "8.2.2",
     "cross-env": "7.0.3",
+    "css-loader": "^5.2.6",
     "electron": "13.1.2",
     "eslint": "7.29.0",
     "eslint-config-prettier": "8.3.0",
@@ -55,9 +58,12 @@
     "eslint-plugin-promise": "5.1.0",
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-standard": "5.0.0",
+    "file-loader": "^6.2.0",
     "jest": "27.0.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.3.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^2.0.0",
     "ts-jest": "27.0.3",
     "typescript": "4.3.4",
     "wait-on": "5.3.0"
