--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
     "axios": "^0.21.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "styled-components": "5.3.0"
+    "react-spring": "^9.2.3",
+    "styled-components": "5.3.0",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.10",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
@@ -43,6 +50,7 @@
     "@types/react-dom": "17.0.8",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "5.1.10",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
     "babel-loader": "8.2.2",
@@ -60,10 +68,11 @@
     "eslint-plugin-standard": "5.0.0",
     "file-loader": "^6.2.0",
     "jest": "27.0.4",
+    "node-sass": "^6.0.1",
     "npm-run-all": "4.1.5",
     "prettier": "2.3.1",
     "sass-loader": "^12.1.0",
-    "style-loader": "^2.0.0",
+    "style-loader": "^3.0.0",
     "ts-jest": "27.0.3",
     "typescript": "4.3.4",
     "wait-on": "5.3.0"
