--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "react-hot-loader": "4.13.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-spring": "^9.2.3",
+    "react-uuid": "^1.0.2",
     "styled-components": "5.3.0",
     "uuid": "^8.3.2",
-    "uuidv4": "^6.2.10",
     "yup": "^0.32.9"
   },
   "devDependencies": {
