--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@unform/web": "^2.1.6",
     "axios": "^0.21.1",
     "react": "17.0.2",
+    "react-data-table-component": "^6.11.7",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-uuid": "^1.0.2",
-    "styled-components": "5.3.0",
+    "styled-components": "^5.3.0",
     "uuid": "^8.3.2",
     "yup": "^0.32.9"
   },
