--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hot-loader": "4.13.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
+    "react-select": "^4.3.1",
     "react-uuid": "^1.0.2",
     "styled-components": "^5.3.0",
     "uuid": "^8.3.2",
@@ -49,6 +50,7 @@
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-select": "^4.0.17",
     "@types/styled-components": "5.1.10",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "4.27.0",
