feat: add, edit & delete students

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
     "react": "17.0.2",
     "react-data-table-component": "^6.11.7",
     "react-dom": "17.0.2",
     "react-hot-loader": "4.13.0",
     "react-icons": "^4.2.0",
+    "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
     "react-select": "^4.3.1",
     "react-uuid": "^1.0.2",
@@ -49,6 +51,7 @@
     "@types/jest": "26.0.23",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
+    "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-select": "^4.0.17",
     "@types/styled-components": "5.1.10",
